--- a/Alacasters_SimpleCodingChallenge/Alacasters_SimpleCodingChallenge.vcxproj
+++ b/Alacasters_SimpleCodingChallenge/Alacasters_SimpleCodingChallenge.vcxproj
@@ -24,6 +24,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>AlacastersSimpleCodingChallenge</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <ProjectName>C_string_API</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
