Add container class as base for other containers like the cstring and soon vector Add iterator

--- a/Alacasters_SimpleCodingChallenge/Alacasters_SimpleCodingChallenge.vcxproj
+++ b/Alacasters_SimpleCodingChallenge/Alacasters_SimpleCodingChallenge.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="memory.c" />
     <ClCompile Include="stringstream.c" />
+    <ClCompile Include="utility.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cstring.h" />
